samples/_failures_safe/1761142791_6e2f4b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9ffd995b.c: In function ‘main’:
./samples/SAFE/__tmp_9ffd995b.c:132:9: error: expected expression at end of input
  132 |         for (int j = 0; j <
      |         ^~~
./samples/SAFE/__tmp_9ffd995b.c:132:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9ffd995b.c:132:9: error: expected declaration or statement at end of input
